infra/k8s/04-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders-service
  namespace: pedidos-veloz
  labels:
    app: orders-service
spec:
  selector:
    app: orders-service
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: payments-service
  namespace: pedidos-veloz
  labels:
    app: payments-service
spec:
  selector:
    app: payments-service
  ports:
    - protocol: TCP
      port: 3002
      targetPort: 3002
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: inventory-service
  namespace: pedidos-veloz
  labels:
    app: inventory-service
spec:
  selector:
    app: inventory-service
  ports:
    - protocol: TCP
      port: 3003
      targetPort: 3003
  type: ClusterIP

---
# API Gateway exposto externamente
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: pedidos-veloz
  labels:
    app: api-gateway
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-health-probe-request-path: /health
spec:
  selector:
    app: api-gateway
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
